# camera_capture_lib

./: CMakeLists.txt  Capturer.h  camera_capture.cpp  camera_capture.h
